# xsens_streaming

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
CMakeModules/: Findmtsdk.cmake
binding/python/: CMakeLists.txt
binding/python/xsens_streaming/: c_xsens_streaming.pxd  xsens_streaming.pxd  xsens_streaming.pyx
include/xsens_streaming/: streamer.h  udpserver.h
src/: CMakeLists.txt
src/xsens_streaming/: CMakeLists.txt  angularsegmentkinematicsdatagram.cpp  datagram.cpp  eulerdatagram.cpp  main.cpp  quaterniondatagram.cpp  timecodedatagram.cpp
